# Week3-Exercises

./: README.md  Shipping_Crisis_Template.ipynb  main.py  pyproject.toml
notebooks/: Shipping_Crisis_Template.ipynb
