[project]
name = "week3-shipping-crisis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.1",
    "pathlib>=1.0.1",
    "seaborn>=0.13",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "autogluon==1.5.0",
]
